<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fr_item_menu_content_description">%1$s recommendation options</string>
    <string name="fr_directions">Directions</string>
    <string name="fr_toolbar_title">Recommendations</string>
    <string name="fr_details">Details</string>
    <string name="fr_filter_toolbar_title">Recommendation</string>
    <string name="fr_filter_product_name">Product name</string>
    <string name="fr_filter_add_product_name_content_description">Add product name</string>
    <string name="fr_filter_should_persist_shopping_lists">Save shopping list items if possible?</string>
    <string name="fr_filter_recommend">Recommend</string>
    <string name="fr_filter_remove_un_persisted_item">Remove unsaved shopping list item \'%1$s\'</string>
    <string name="fr_filter_remove_persisted_item">Remove saved shopping list item \'%1$s\'</string>
    <string name="fr_filter_un_persisted_list_subheading">Unsaved shopping list</string>
    <string name="fr_filter_persisted_list_subheading">Saved shopping list</string>
    <string name="fr_recommendation_card_test_tag" translatable="false">Recommendation card test tag %1$d</string>
    <string name="fr_detail_hit_heading">Items found</string>
    <string name="fr_detail_miss_heading">Items not found</string>
    <string name="fr_shop_details">Shop details</string>
    <string name="fr_initiating_location_tracking">Please wait as we capture your location…</string>
    <string name="fr_app_handling_directions_not_found">Sorry, we did not find an application on your device that can handle map directions. As we work on a native implementation, please, consider installing Google Maps or an equivalent application before trying again.</string>
</resources>