...
import co.ke.xently.feature.utils.Routes
import co.ke.xently.source.remote.HttpException
import co.ke.xently.source.remote.RETRY_ABLE_ERROR_CLASSES
import com.google.accompanist.swiperefresh.SwipeRefresh
import com.google.accompanist.swiperefresh.rememberSwipeRefreshState

const val TEST_TAG_CIRCULAR_PROGRESS_BAR = "TEST_TAG_CIRCULAR_PROGRESS_BAR"

val VIEW_SPACE = 16.dp

val VIEW_SPACE_HALVED = VIEW_SPACE / 2

val NEGLIGIBLE_SPACE = 2.dp
...
