<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="drawer_menu_account">Account</string>
    <string name="drawer_menu_shopping_list">Shopping list</string>
    <string name="fsl_drawer_menu_signin">Sign in</string>
    <string name="fsl_drawer_menu_signout">Sign out</string>
    <string name="fsl_drawer_menu_help">Help</string>
    <string name="fsl_drawer_menu_feedback">Feedback</string>
    <string name="fsl_navigation_drawer_other_menu">Others</string>
    <string name="fsl_toolbar_title">Shopping list</string>
    <string name="fsl_group_button_see_all">SEE ALL</string>
    <string name="fsl_group_menu_recommend">Recommend</string>
    <string name="fsl_group_menu_duplicate">Duplicate</string>
    <string name="fsl_group_card_menu_content_desc_more">Show card menu</string>
    <string name="fsl_empty_shopping_list">Oops! You seem to have no shopping list (item) added, yet.</string>
    <string name="fsl_detail_screen_toolbar_title">%1$s shopping list item</string>
    <string name="fsl_text_field_label_purchase_quantity">Purchase quantity</string>
    <string name="fsl_success_adding_shopping_list_item">Successfully added shopping list item.</string>
    <string name="fsl_detail_more_actions_content_description">%1$s shopping list item options</string>
    <string name="fsl_shopping_list_overflow_menu_description">More options for shopping list.</string>
    <string name="fsl_grouped_shopping_list_overflow_menu_description">More options for grouped shopping list.</string>
</resources>